tests/baselines/reference/contextualClassMethodParameter16.errors.txt
tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter16.ts(6,15): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter16.ts (1 errors) ====
    class Base {
        method (x: number) { }
    }
    
    class Derived extends Base {
        method = (x) => { }
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    